objects/DMAPP__Insight_Namespace__c.object
<CustomObject>
    <description>Insight Namespace</description>
    <fields>
        <fullName>DMAPP__CollaborationGroup__c</fullName>
        <description>Name of chatter group</description>
        <label>Chatter Group</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DMAPP__DealmakerID__c</fullName>
        <externalId>true</externalId>
        <label>Dealmaker ID</label>
        <length>40</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>DMAPP__Publisher_Description__c</fullName>
        <description>A description of the Publisher of this Namespace</description>
        <inlineHelpText>A description of the Publisher of this Namespace</inlineHelpText>
        <label>Publisher Description</label>
        <length>1024</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>DMAPP__Publisher_Group__c</fullName>
        <description>Determines the order in which the Publishers appear in the search results</description>
        <inlineHelpText>Determines the order in which the Publishers appear in the search results</inlineHelpText>
        <label>Publisher Group</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Please configure</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DMAPP__Publisher_Name__c</fullName>
        <description>The display name for the publisher of this namespace</description>
        <inlineHelpText>The display name for the publisher of this namespace</inlineHelpText>
        <label>Publisher Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DMAPP__Publisher_Tag_Line__c</fullName>
        <description>A brief description of the publishers purpose</description>
        <inlineHelpText>A brief description of the publishers purpose</inlineHelpText>
        <label>Publisher Tag Line</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DMAPP__Publisher_Type__c</fullName>
        <description>Allows Publishers to be grouped together in search results</description>
        <inlineHelpText>Allows Publishers to be grouped together in search results</inlineHelpText>
        <label>Publisher Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Please configure</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Smart Map Namespace</label>
    <listViews>
        <fullName>DMAPP__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Namespace</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Smart Map Namespaces</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>